sidebar collapsing implementation and bug fixes

--- a/components/src/core/components/CardTable/Table/table.scss
+++ b/components/src/core/components/CardTable/Table/table.scss
@@ -55,5 +55,5 @@
 
 .oxd-table-cell {
   overflow-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
 }
